<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_simulador.Simulador3">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/texto_pergunta03"
        android:text="@string/texto_pergunta03"
        android:textColor="#000000"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta08"
            android:text="@string/pergunta09" />

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pergunta10" />

        <RadioButton
            android:id="@+id/radioButton11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pergunta11" />

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pergunta12" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAvancarTela3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/btn_avancar"
        android:text="@string/btn_avancar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVoltarTela3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_Voltar"
        android:text="@string/btn_Voltar"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAvancarTela3" />

</androidx.constraintlayout.widget.ConstraintLayout>