<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout8"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Simulador8" >

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/texto_pergunta08"
        android:text="@string/texto_pergunta08"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <RadioButton
            android:id="@+id/radioButton27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta27"
            android:text="@string/pergunta27" />

        <RadioButton
            android:id="@+id/radioButton28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta28"
            android:text="@string/pergunta28" />

        <RadioButton
            android:id="@+id/radioButton29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta29"
            android:text="@string/pergunta29" />

        <RadioButton
            android:id="@+id/radioButton30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta30"
            android:text="@string/pergunta30" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAvancarTela8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/btn_avancar"
        android:text="@string/btn_avancar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup8" />
</androidx.constraintlayout.widget.ConstraintLayout>