<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_simulador.Simulador6">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/texto_pergunta06"
        android:text="@string/texto_pergunta06"
        android:textColor="#000000"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/radioButton19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta19"
            android:text="@string/pergunta19" />

        <RadioButton
            android:id="@+id/radioButton20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta20"
            android:text="@string/pergunta20" />

        <RadioButton
            android:id="@+id/radioButton21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta21"
            android:text="@string/pergunta21" />

        <RadioButton
            android:id="@+id/radioButton22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta22"
            android:text="@string/pergunta22" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAvancarTela6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/btn_avancar"
        android:text="@string/btn_avancar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVoltarTela6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_Voltar"
        android:text="@string/btn_Voltar"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAvancarTela6" />

</androidx.constraintlayout.widget.ConstraintLayout>