<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_simulador.Simulador7">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/texto_pergunta07"
        android:text="@string/texto_pergunta07"
        android:textColor="#000000"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <RadioButton
            android:id="@+id/radioButton23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta23"
            android:text="@string/pergunta23" />

        <RadioButton
            android:id="@+id/radioButton24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta24"
            android:text="@string/pergunta24" />

        <RadioButton
            android:id="@+id/radioButton25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta25"
            android:text="@string/pergunta25" />

        <RadioButton
            android:id="@+id/radioButton26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/pergunta26"
            android:text="@string/pergunta26" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAvancarTela7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/btn_avancar"
        android:text="@string/btn_avancar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnVoltarTela7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/btn_Voltar"
        android:text="@string/btn_Voltar"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAvancarTela7" />

</androidx.constraintlayout.widget.ConstraintLayout>